--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -34,7 +34,7 @@
 
 .chat {
   display: flex;
-  height: 500px;
+  height: 100vh;
   border: 1px solid rgba(159, 183, 197, 0.2);
   border-radius: 8px;
   overflow: hidden;
